--- a/Salt/Color.plist
+++ b/Salt/Color.plist
@@ -2,9 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NoteSelected</key>
+	<string>0.00,0.48,0.8,1.00</string>
 	<key>NoteMinVelocity</key>
-	<string>0.00, 0.48, 0.59, 1.00</string>
+	<string>0.00,0.48,0.59,1.00</string>
 	<key>NoteMaxVelocity</key>
-	<string>0.51, 0.62, 0.35, 1.00</string>
+	<string>0.51,0.62,0.35,1.00</string>
 </dict>
 </plist>
